[package]
authors = ["Achim Schneider <achim@parity.io>"]
edition = "2022"
name = "wasm-test-host-nb-interface"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = {version = "^0.3.0", default-features = false}
num_enum = {version = "0.5.1", default-features = false}

[features]
default = ["fallback"]
fallback = []